--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="nav_content">
                 <a href="#home">Home</a>
                 <a href="#package">Our Package</a>
-                <a href="">Call Us</a>
+                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
@@ -37,7 +37,7 @@
                 <div class="isi">
                     <div class="form_title">
                         <h1>Contact Us</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.rbgtrgbrtbbbbbbbbbbbbbbbbtrrr</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                     </div>
                     <div class="form_content">
                         <form action="" class="form_fill">
@@ -54,7 +54,7 @@
                                 <textarea name="" id="" cols="30" rows="10" placeholder="Pesan Anda..."></textarea>
                             </div>
                             <div class="form_in">
-                                <input type="submit" value="SEND">
+                                <input type="submit" value="SEND" class="submit">
                             </div>
                         </form>
                     </div>
@@ -64,7 +64,7 @@
 
         <div class="package_content" id="package">
             <div class="package_title">
-                <h2>OUR PACKAGE</h2>
+                <p>OUR PACKAGE</p>
             </div>
             <div class="card_container">
                 <div class="card_content">
@@ -118,9 +118,26 @@
         </div>
     </div>
     
-    <div>
-        <h1>halao</h1>
-    </div>
+    <section class="contact_container" id="contact">
+        <div class="contact_title">
+            <p>CONTACT US</p>
+        </div>
+        <div class="contact_content">
+           <h2 class="">DISASTER WASH SHOES</h2>
+           <p>Phone: 089768546454</p>
+           <p>Email: disaster@gmail.com</p>
+           <p>Jl.H.Daud No.89, Depok Timur, Depok</p>
+        </div>
+
+        <div class="icon_content">
+           <a href=""><img class="img" src="./asset/whatsapp (1).png" alt=""></a>
+           <a href=""><img class="img" src="./asset/instagram (1).png" alt=""></a>
+        </div>
+    </section>
+
+    <footer class="footer_container">
+       <p>&copy; 2024 Disaster Wash Shoes</p>
+    </footer>
 </body>
 
 </html>
