--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </footer>
 
 
-    <!-- maaf ka javascript saya taruhnya di inline html, karena kalo saya taro di file JS sintax stylenya tidak terbaca -->
+    <!-- maaf ka untuk javascript banner slide saya taruhnya di inline html, karena kalo saya taro di file JS sintax stylenya tidak terbaca -->
     <!-- awal javascript untuk banner auto slide -->
     <script>
         var slideIndex = 1;
